// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testeando componente <ProductCard /> Debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Testeando componente <ProductCard /> Debe mostrar el compoenent correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
